# Load_balancer_cpp

./: .env.example  .gitignore  README.md  docker-compose.example.yml
backend1/: Dockerfile  app.js
backend2/: Dockerfile  app.js  package-lock.json
backend3/: Dockerfile  app.js  package.json
dashboard/: package-lock.json  package.json  server.js
dashboard/public/: index.html  script.js  style.css
load_balancer/: CMakeLists.txt
load_balancer/include/: BackendManager.h  BackendServer.h  ClientHandler.h  HealthChecker.h  HttpParser.h  HttpRequest.h  HttpResponse.h  LeastConnectionLoadBalancer.h  LoadBalancer.h  LoadBalancingAlgorithm.h  Logger.h  Metrics.h  NetworkInitializer.h  ReverseProxy.h  RoundRobinLoadBalancer.h  TcpClient.h  TcpServer.h  ThreadPool.h
load_balancer/src/: BackendManager.cpp  BackendServer.cpp  HealthChecker.cpp  HttpParser.cpp  HttpRequest.cpp  HttpResponse.cpp  LeastConnectionLoadBalancer.cpp  LoadBalancer.cpp  Metrics.cpp  NetworkInitializer.cpp  ReverseProxy.cpp  RoundRobinLoadBalancer.cpp  TcpClient.cpp  TcpServer.cpp  ThreadPool.cpp  logger.cpp  main.cpp
